第一个合并版本，不会混淆，尴尬

--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "dependencies": {
     "express": "^4.15.3",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "pump": "^1.0.2",
     "uglify-es": "^3.0.25"
+  },
+  "devDependencies": {
+    "gulp-uglify": "^3.0.0"
   }
 }
