--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "express": "^4.15.3",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
-    "pump": "^1.0.2",
-    "uglify-es": "^3.0.25"
+    "pump": "^1.0.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "gulp-babel": "^7.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0"
   }
 }
