--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "babel-preset-es2015": "^6.24.1",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "mocha": "^3.5.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
