--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.1.1",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "mocha": "^3.5.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha tests/test.js"
   }
 }
