--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "pump": "^1.0.2"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.1",
     "gulp-babel": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "run-sequence": "^2.1.0"
   },
   "scripts": {
     "test": "mocha tests/test.js"
